# generic_airdrop

./: .gitignore  Cargo.toml  README.md  build.sh  dfx.json  extract_csv.sh  extract_json.sh  fix_and_fmt.sh  test.sh
airdrop_canister/: Cargo.toml  candid.did
airdrop_canister/src/: canister.rs  main.rs  state.rs  types.rs  utils.rs
generic_airdrop/: Cargo.toml  candid.did
generic_airdrop/src/: canister.rs  main.rs  state.rs
icpcc_airdrop/: Cargo.toml  candid.did
icpcc_airdrop/src/: canister.rs  state.rs  types.rs  utils.rs
