[package]
name = "airdrop_canister"
version = "0.1.0"
edition = "2021"

[features]
default = []
export-api = []

[dependencies]
ic-exports = { git = "https://github.com/infinity-swap/canister-sdk", package = "ic-exports", tag = "v0.15.x" }
ic-storage = { git = "https://github.com/infinity-swap/canister-sdk", package = "ic-storage", tag = "v0.15.x" }
ic-canister = { git = "https://github.com/infinity-swap/canister-sdk", package = "ic-canister", tag = "v0.15.x" }
serde = "1.0.199"
serde_bytes = "0.11.12"
icrc-ledger-types = "0.1.5"
candid = "0.10.9"